Notas al pie de comunidades nativas terminado

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_1.cshtml
@@ -12,6 +12,9 @@
         <tr>
             <td style="border: 1px solid #000;">
                 Literal s) del numeral 29.1 del artículo 29 del RGFFSCNCC
+                <a style="mso-footnote-id: foot_infraccion_1_1" href="#_foot_infraccion_1_1" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 1 del Anexo 1 del RISMFFS.<br /><br />
@@ -78,7 +81,10 @@
 {{/if}}
 <ul>
     <li>
-        Conforme al contenido Informe de Supervisión, su numeral xxx, cuadro N° xx, se advierte que, el/la administrado (a) no ha cumplido con la señalización de los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03), igualmente, con el linderamiento de las Parcelas de Corta”, afirmación que guarda concordancia con la siguiente imagen fotográfica tomada durante la supervisión:
+        Conforme al contenido Informe de Supervisión, su numeral xxx, cuadro N° xx, se advierte que, el/la administrado (a) no ha cumplido con la señalización de los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03), igualmente, con el linderamiento de las Parcelas de Corta”, afirmación que guarda concordancia con la siguiente imagen fotográfica tomada durante la supervisión
+        <a style="mso-footnote-id: foot_infraccion_1_2" href="#_foot_infraccion_1_2" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>:
     </li>
 </ul>
 <p style="text-align: center;"><strong>Adjuntar imagen</strong></p>
@@ -95,5 +101,8 @@
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 1 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
+    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción
+    <a style="mso-footnote-id: foot_infraccion_1_3" href="#_foot_infraccion_1_3" title="">
+        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+    </a> tipificada en el numeral 1 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
 </p>
