--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_11.cshtml
@@ -75,19 +75,33 @@
 {{/if}}
 <ul>
     <li>
-        Con fecha xxx se aprobó la xxxx en favor del/de la administrado (a), con vigencia desde el XX de XXX de 202X hasta el XX de XXX de 202X.
+        Con fecha xxx se aprobó la xxxx en favor del/de la administrado (a)
+        <a style="mso-footnote-id: foot_infraccion_11_1" href="#_foot_infraccion_11_1" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, con vigencia desde el XX de XXX de 202X hasta el XX de XXX de 202X.
     </li>
     <li>
-        En el marco de la implementación de la DEMA el/la administrado (a) efectuó aprovechamiento forestal, dado que, durante la diligencia de supervisión, <u><strong>xx árboles</strong> fueron hallados en tocón, asimismo, efectuó su última movilización de madera el xx  de xxxx de 202x</u>.
+        En el marco de la implementación de la DEMA el/la administrado (a) efectuó aprovechamiento forestal, dado que, durante la diligencia de supervisión, <u>
+            <strong>xx árboles</strong> fueron hallados en tocón, asimismo, efectuó su última movilización de madera el xx  de xxxx de 202x
+            <a style="mso-footnote-id: foot_infraccion_11_2" href="#_foot_infraccion_11_2" title="">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+        </u>.
     </li>
     <li>
-        Acorde a la Resolución de Dirección Ejecutiva N° 264-2019-MINAGRI-SERFOR-DE, de fecha de fecha 30 de diciembre de 2019, el/la administrado (a) tenía la obligación registrar la información del aprovechamiento realizado desde la Sección “Tala” del Libro de Operaciones.
+        Acorde a la Resolución de Dirección Ejecutiva N° 264-2019-MINAGRI-SERFOR-DE, de fecha de fecha 30 de diciembre de 2019
+        <a style="mso-footnote-id: foot_infraccion_11_3" href="#_foot_infraccion_11_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, el/la administrado (a) tenía la obligación registrar la información del aprovechamiento realizado desde la Sección “Tala” del Libro de Operaciones.
     </li>
     <li>
         Al respecto, revisado los documentos del presente PAU,  y de la búsqueda realizada en el Sistema de Trámite Documentario - SITD del OSINFOR, se advierte que el/la administrado (a) no ha presentado el Libro de Operaciones, hasta la fecha de emisión de la presente resolución, a pesar de que se encontraba en la obligatoriedad de contar con el libro de operaciones.
     </li>
     <li>
-        Aunado a ello, mediante Oficio N° xxx, de fecha xxxx (Registro N° 202209761), la ARFFS señala que, para el/la administrado (a) no se ha aprobado codificación del libro de operaciones.
+        Aunado a ello, mediante Oficio N° xxx, de fecha xxxx (Registro N° 202209761), la ARFFS señala que, para el/la administrado (a) no se ha aprobado codificación del libro de operaciones
+        <a style="mso-footnote-id: foot_infraccion_11_4" href="#_foot_infraccion_11_4" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>.
     </li>
     <li>
         En consecuencia, el/la administrado (a), no ha cumplido con tener el Libro de Operaciones de acuerdo a las disposiciones establecidas.
@@ -95,5 +109,8 @@
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 11 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
+    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción
+    <a style="mso-footnote-id: foot_infraccion_11_5" href="#_foot_infraccion_11_5" title="">
+        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+    </a> tipificada en el numeral 11 del Anexo 1 del RISMFFS; <u>criterio acorde a lo señalado en el Informe Final de Instrucción.</u>
 </p>
