--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_21.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_21.cshtml
@@ -99,6 +99,9 @@
             </th>
             <th style="text-align: center; border: 1px solid #000;">
                 Volumen movilizado en el Balance de Extracción (A)
+                <a style="mso-footnote-id: foot_infraccion_21_1" href="#_foot_infraccion_21_1" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>
             </th>
             <th style="text-align: center; border: 1px solid #000;">
                 Volumen movilizado advertido en campo (B)
@@ -133,6 +136,15 @@
     </tfoot>
 </table>
 <ul>
+    <li>
+        El Informe de Supervisión constituye el principal medio probatorio para demostrar las imputaciones que motivaron el desarrollo del presente PAU, por resultar veraz, objetivo y reflejar necesariamente aquello que el supervisor ha podido constatar fehacientemente
+        <a style="mso-footnote-id: foot_infraccion_21_2" href="#_foot_infraccion_21_2" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, lo cual es concordante con lo señalado por el Tribunal Forestal y de Fauna Silvestre del OSINFOR, en el numeral 40
+        <a style="mso-footnote-id: foot_infraccion_21_3" href="#_foot_infraccion_21_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>.
+    </li>
     <li>
         La extracción no autorizada es atribuible al/la administrado (a), puesto que reportó su aprovechamiento, lo que implica incumplimiento del documento de gestión, el cual es un instrumento que comprende las actividades de manejo a desarrollarse en una unidad de aprovechamiento, a fin de realizar un aprovechamiento sostenible del recurso maderable autorizado; y, que el propio administrado presentó ante la ARFFS y fue aprobado.
     </li>
