--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_29.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_29.cshtml
@@ -78,7 +78,10 @@
 {{/if}}
 <ul>
     <li>
-        Con fecha xxx, el/la administrado (a) y el Ing. XX suscribieron el Contrato de Regencia Forestal, el cual solo considera los servicios del Regente Forestal para la elaboración del PMFI, tal como se observa a continuación:
+        Con fecha xxx, el/la administrado (a) y el Ing. XX suscribieron el Contrato de Regencia Forestal
+        <a style="mso-footnote-id: foot_infraccion_29_1" href="#_foot_infraccion_29_1" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, el cual solo considera los servicios del Regente Forestal para la elaboración del PMFI, tal como se observa a continuación:
     </li>
 </ul>
 <p style="text-align: center;">
@@ -98,6 +101,13 @@
 <ul>
     <li>
         En efecto, el/la administrado (a) implementó el Plan de Manejo Forestal xxx, sin embargo, no contó con regente forestal entre las fechas xx de xxx de xx al xx de xxx de xxx, fechas en las que efectúo aprovechamiento forestal.
+    </li>
+    <li>
+        Al respecto, cabe señalar que en el literal m)
+        <a style="mso-footnote-id: foot_infraccion_29_2" href="#_foot_infraccion_29_2" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> del numeral 29.1 del artículo 29 del
+        RGFFSCNCC se establece como obligación de la titular del título habilitante contar con regente forestal para la implementación del plan de manejo.
     </li>
 </ul>
 
