--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_b.cshtml
@@ -14,7 +14,13 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                Literal b) del artículo 153 de LFFS, concordado con lo establecido en el Literal b) del artículo 30 del RGFFSCNCC.
+                Literal b)
+                <a style="mso-footnote-id: foot_infraccion_b_1" href="#_foot_infraccion_b_1" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a> del artículo 153 de LFFS, concordado con lo establecido en el Literal b)
+                <a style="mso-footnote-id: foot_infraccion_b_2" href="#_foot_infraccion_b_2" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a> del artículo 30 del RGFFSCNCC.
             </td>
             <td style="border: 1px solid #000;">
                 Incumplir con la implementación del plan de manejo aprobado y demostrar el origen legal de los productos aprovechados
@@ -80,7 +86,10 @@
         El literal b) del artículo 153 de la Ley N° 29763, Ley Forestal y de Fauna Silvestre, de modo concordante con el literal b) del artículo 30 del RGFFSCNCC constituye una causal de caducidad, la extracción o movilización de recursos forestales no autorizados, lo que ha ocurrido en el presente caso, conforme a lo analizado en los numerales XX al XX de la presente resolución.
     </li>
     <li>
-        Asimismo, se cumplen los criterios mínimos para declarar la caducidad indicados en el  numeral 7.2 de los “Criterios para la declaración de caducidad del título habilitante en el PAU del OSINFOR”, aprobado por Resolución de Jefatura N° 009-2018-OSINFOR, conforme se detalla en el siguiente cuadro:
+        Asimismo, se cumplen los criterios mínimos para declarar la caducidad indicados en el  numeral 7.2 de los “Criterios para la declaración de caducidad del título habilitante en el PAU del OSINFOR”, aprobado por Resolución de Jefatura N° 009-2018-OSINFOR
+        <a style="mso-footnote-id: foot_infraccion_b_3" href="#_foot_infraccion_b_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, conforme se detalla en el siguiente cuadro:
     </li>
 </ul>
 <table cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
@@ -112,7 +121,10 @@
                 c) Antecedentes del titular por infracción a la legislación forestal que, como mínimo, hayan generado un daño de nivel “grave” al Patrimonio Forestal Nacional. La referida afectación debe ser confrontada con la estimación actual del daño, según los criterios vigentes para estimar la gravedad del daño, la misma que solo será considerada en el análisis del presente criterio, si se mantiene en el mismo nivel de magnitud.
             </td>
             <td style="border: 1px solid #000;">
-                Según el reporte de antecedentes, la titular no cuenta con antecedentes por infracción a la legislación forestal, por lo cual, no se cumple el presente criterio
+                Según el reporte de antecedentes
+                <a style="mso-footnote-id: foot_infraccion_b_4" href="#_foot_infraccion_b_4" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>, la titular no cuenta con antecedentes por infracción a la legislación forestal, por lo cual, no se cumple el presente criterio
             </td>
         </tr>
         <tr>
@@ -139,7 +151,10 @@
         Es en base a lo expuesto precedentemente, se ha establecido que el/la administrado (a) se encuentra incursa en la causal de caducidad previamente señalada.
     </li>
     <li>
-        En ese sentido, teniendo en consideración el principio de legalidad y el de predictibilidad o confianza legítima, esta Autoridad debe actuar conforme a lo establecido en las normas antes citadas, no pudiéndose apartar del análisis que se realice en base a la aplicación los referidos criterios. En efecto, es importante señalar que toda actuación de la Administración tiene una finalidad objetivamente determinada y se orienta a satisfacer un interés general que, en el presente caso, es tutelar el patrimonio forestal y de fauna silvestre, el cual se ha visto gravemente afectado por el manejo realizado a través del título habilitante.
+        En ese sentido, teniendo en consideración el principio de legalidad y el de predictibilidad o confianza legítima
+        <a style="mso-footnote-id: foot_infraccion_b_5" href="#_foot_infraccion_b_5" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, esta Autoridad debe actuar conforme a lo establecido en las normas antes citadas, no pudiéndose apartar del análisis que se realice en base a la aplicación los referidos criterios. En efecto, es importante señalar que toda actuación de la Administración tiene una finalidad objetivamente determinada y se orienta a satisfacer un interés general que, en el presente caso, es tutelar el patrimonio forestal y de fauna silvestre, el cual se ha visto gravemente afectado por el manejo realizado a través del título habilitante.
     </li>
 </ul>
 
