--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_26.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_26.cshtml
@@ -81,7 +81,19 @@
         Existe un volumen de xxx m<sup>3</sup> de madera movilizado, conformado por las especies XXXX (XX m<sup>3</sup>), XXXX (XX m<sup>3</sup>) que proviene de individuos no autorizados; por lo que el/la administrado (a) hizo uso de Guías de Transporte Forestal y documentación de su título habilitante para transportar dicho volumen; es decir, dio apariencia de legalidad a dichos productos.
     </li>
     <li>
-        El/la administrado (a) es la responsable por el uso de las GTF conforme a lo dispuesto en el artículo 4 de la Resolución de Dirección Ejecutiva N° 122-2015-SERFOR-DE.
+        El/la administrado (a) es la responsable
+        <a style="mso-footnote-id: foot_infraccion_26_1" href="#_foot_infraccion_26_1" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> por el uso de las GTF conforme a lo dispuesto en el artículo 4
+        <a style="mso-footnote-id: foot_infraccion_26_2" href="#_foot_infraccion_26_2" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> de la Resolución de Dirección Ejecutiva N° 122-2015-SERFOR-DE, situación que es concordante con el artículo 107
+        <a style="mso-footnote-id: foot_infraccion_26_3" href="#_foot_infraccion_26_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> del RGFFSCNCC, que establece, entre otros, que los autorizados para emitir las Guías de Transporte Forestal pueden ser: el presidente, jefe, apu, representante o regente contratado por la comunidad nativa, las cuales deberán ser registradas ante la Autoridad Forestal y de Fauna Silvestre, documentos que tienen carácter de declaración jurada.
+    </li>
+    <li>
+        En este entender, al haberse determinado que el producto extraído provino de individuos no autorizados, permite concluir que la administrada es la responsable de haber amparado la movilización o transporte del volumen imputado.
     </li>
 </ul>
 
