--- a/SIGOFCv3/Areas/Fiscalizacion/css/ManPAU/index.css
+++ b/SIGOFCv3/Areas/Fiscalizacion/css/ManPAU/index.css
@@ -53,6 +53,9 @@
 .file-attach-info .file-attach-details { color: #909090; }
 .file-attach-info .file-attach-remove { position: absolute; color: #696969; font-weight: 300; font-size: 25px; line-height: 15px; top: 5px; right: 5px; cursor: pointer; user-select: none; -moz-user-select: none; -ms-user-select: none; }
 
+.tables-join .container-fluid { margin: 0 !important; padding: 0 !important; }
+.tables-join .table { margin-top: 0 !important; }
+
 @@keyframes zoomIn {
     0% { transform: scale(2); }
     80% { transform: scale(0.8); }
