--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/_InformeResDir.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/_InformeResDir.cshtml
@@ -17,9 +17,9 @@
         $('#myTab a.nav-link[href="#navDatos"]').tab("show");
     }
 
-    $(function () {
-        if (!$('#txtFechaEmision').val()) $('#txtFechaEmision').val(fnDate.text(new Date()));
-    });
+    //$(function () {
+    //    if (!$('#txtFechaEmision').val()) $('#txtFechaEmision').val(fnDate.text(new Date()));
+    //});
 </script>
 <script src="~/Scripts/ckeditor5/config.js?v=1"></script>
 <script src="~/Areas/General/js/Informes/general.js?v=1"></script>
@@ -187,7 +187,7 @@
                             </span>
                         </template>
                     </div>
-                </div>                                
+                </div>
                 <div class="table-responsive tables-join">
                     <table class="table table-bordered mb-0">
                         <thead>
@@ -390,9 +390,14 @@
                 </div>
             </div>
         </fieldset>
-        <fieldset class="fs-border" v-if="Informe.INFRACCIONES.length">
+        <fieldset class="fs-border">
             <legend>Análisis de la imputación de cargos</legend>
-            <h5>Imputaciones a considerar</h5>
+            <h5>
+                Imputaciones a considerar
+                <a class="btn btn-link btn-sm ml-2" onclick="_informe.Agregar_Imputaciones()">
+                    <i class="fa fa-plus-circle mr-2"></i>Añadir una imputación
+                </a>
+            </h5>
             <div class="mt-3" v-for="(item, index) in Informe.INFRACCIONES">
                 <div class="custom-control custom-checkbox custom-control-inline">
                     <input type="checkbox" class="custom-control-input" :id="'inf_' + index" v-model="item.flgSeleccionado">
@@ -401,6 +406,14 @@
                         <span class="small text-muted mt-2" v-if="item.detalle">{{item.detalle}}</span>
                     </label>
                 </div>
+            </div>
+            <div class="d-flex border rounded p-4 py-5 justify-content-center align-items-center" v-if="!Informe.INFRACCIONES.length">
+                <div class="text-center">
+                    <div>Agregue imputaciones para mostrar aqui</div>
+                    <a class="btn btn-link btn-sm ml-2" onclick="_informe.Agregar_Imputaciones()">
+                        <i class="fa fa-plus-circle mr-2"></i>Agregar...
+                    </a>
+                </div>                
             </div>
         </fieldset>
 
