--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_2.cshtml
@@ -21,7 +21,7 @@
                 No presentar el Informe de Ejecución xxxx, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables
             </td>
             <td style="border: 1px solid #000; text-align: center;">
-                Escrito xxxxxxx SITD xxxxxxxxx
+                Escrito ${informe.ANTECEDENTES_DOCS.Escrito.numero || '00XX-202X-OSINFOR/08.2.X'} SITD xxxxxxxxx
             </td>
             <td style="border: 1px solid #000; text-align: center;">
                 Dependerá del caso concreto
@@ -33,7 +33,7 @@
 
 {{if informe.COD_TIPO_INFORME == 1}}
 <p class="enumeration">
-    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 202X, ingresado con fecha xx de xxxx de 202X (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
+    Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° ${informe.ANTECEDENTES_DOCS.Carta.numero || '00XX-202X-OSINFOR/08.2.X'} de fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, ingresado con fecha xx de ${informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto || 'xx de xxxxx de 202X'} (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -121,7 +121,7 @@
 
 {{if informe.COD_TIPO_INFORME == 1}}
 <p class="enumeration">
-    Al respecto, mediante escrito N°xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
+    Al respecto, mediante escrito N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || '00XX-202X-OSINFOR/08.2.X'} con SITD N° xxxxxxx de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -157,7 +157,7 @@
         </a> con presentar el Informe de Ejecución del anual, del periodo xxxx - xxxx, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables, conforme se aprecia en las siguientes imágenes:
     </li>
 </ul>
-<p style="text-align: center;"><strong>Consignar imagen<br />Fuente: SITD N°xxxxxxxxxx</strong></p>
+<p style="text-align: center;"><strong>Consignar imagen<br />Fuente: SITD N° xxxxxxxxxx</strong></p>
 {{/if}}
 
 <ul>
